Change folder structure;add migrations,middlewares,global error handler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "esModuleInterop": true,
     "target": "es6",
     "sourceMap": true,
-    "outDir": "dist"
+    "rootDir": "src",
+    "outDir": "dist",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
