--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch dist/app.js",
-    "build": "rm -rf dist/ && tsc",
-    "ts-start": "npm run build && npm run start"
+    "start": "node dist/app.js",
+    "build": "rm -rf dist/ && npx tsc",
+    "ts-start": "npm run build && npm run start",
+    "migration:create": "npm run build && npx typeorm migration:create",
+    "migration:generate": "npm run build && npx typeorm migration:generate -d dist/db/data-source.db.js",
+    "migration:run": "npm run build && npx typeorm migration:run -d dist/db/data-source.db.js",
+    "migration:revert": "npm run build && npx typeorm migration:revert -d dist/db/data-source.db.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "@types/node": "20.14.9",
-    "@types/express": "4.17.21"
+    "@types/express": "4.17.21",
+    "@types/node": "^20.14.9"
   }
 }
