--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "outDir": "dist",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
-  }
+  },
+  "include": ["src/**/*.ts", ".env"],
+  "exclude": ["**/*test.ts"]
 }
