--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "start": "node dist/app.js",
     "build": "rm -rf dist/ && npx tsc",
     "ts-start": "npm run build && npm run start",
@@ -17,10 +18,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
@@ -29,6 +33,20 @@
   },
   "devDependencies": {
     "@types/express": "4.17.21",
-    "@types/node": "^20.14.9"
+    "@types/jest": "^29.5.12",
+    "@types/jest-when": "^3.5.5",
+    "@types/node": "^20.14.9",
+    "jest-when": "^3.6.0",
+    "ts-jest": "^29.1.5"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(t)s$": "ts-jest"
+    },
+    "verbose": true,
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.ts",
+      "!**/index.ts"
+    ]
   }
 }
